computer with access

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -26,7 +26,7 @@
         titleFormat: "MM yyyy", /* Leverages same syntax as 'format' */
         weekStart: 1,
     };
-    $('input').datepicker({
+    document.getElementsByName('receiptDate').datepicker({
         language: "ru",
         todayBtn: "linked",
         clearBtn: true
